[gd_scene load_steps=9 format=3 uid="uid://cmvw1gkyaj1ku"]

[ext_resource type="Script" path="res://Events/Combat/Enemies/Enemy/enemy.gd" id="1_vdyxb"]
[ext_resource type="SpriteFrames" uid="uid://b8ux7lh8otolc" path="res://Events/Combat/Enemies/Enemy/EnemyResources/FireWizard/animations.tres" id="4_m1qmw"]
[ext_resource type="Script" path="res://Events/Combat/Enemies/Enemy/enemy_state_machine.gd" id="6_e36d3"]
[ext_resource type="Script" path="res://Events/Combat/Enemies/Enemy/idle.gd" id="7_0ira3"]
[ext_resource type="Script" path="res://Events/Combat/Enemies/Enemy/attack.gd" id="8_5yfpk"]
[ext_resource type="Script" path="res://Events/Combat/Enemies/Enemy/hit.gd" id="9_rfm78"]
[ext_resource type="Script" path="res://Events/Combat/Enemies/Enemy/death.gd" id="10_helqy"]
[ext_resource type="PackedScene" uid="uid://3b256apu812h" path="res://Card/Card.tscn" id="11_kxhfk"]

[node name="Enemy" type="Node2D"]
position = Vector2(200, 200)
scale = Vector2(2, 2)
script = ExtResource("1_vdyxb")
health = 100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(-1, 1)
sprite_frames = ExtResource("4_m1qmw")
animation = &"idle"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_e36d3")
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_0ira3")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("8_5yfpk")

[node name="Hit" type="Node" parent="StateMachine"]
script = ExtResource("9_rfm78")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource("10_helqy")

[node name="HealthTracker" type="Label" parent="."]
offset_left = -21.0
offset_top = 28.0
offset_right = 295.0
offset_bottom = 165.0
scale = Vector2(0.07, 0.07)
theme_override_font_sizes/font_size = 100
text = "health"
horizontal_alignment = 1

[node name="BlockTracker" type="Label" parent="."]
offset_top = 28.0
offset_right = 316.0
offset_bottom = 165.0
scale = Vector2(0.07, 0.07)
theme_override_colors/font_color = Color(0.639216, 0.756863, 0.901961, 1)
theme_override_font_sizes/font_size = 100
text = "block"
horizontal_alignment = 1

[node name="DoTTracker" type="Label" parent="."]
offset_left = -20.5
offset_top = 35.0
offset_right = 303.5
offset_bottom = 172.0
scale = Vector2(0.07, 0.07)
theme_override_colors/font_color = Color(0, 0.454902, 0.278431, 1)
theme_override_font_sizes/font_size = 100
text = "poison"
horizontal_alignment = 1

[node name="Card" parent="." instance=ExtResource("11_kxhfk")]
offset_left = 2.0
offset_top = -60.0
offset_right = 2.0
offset_bottom = -60.0
scale = Vector2(0.35, 0.35)
mouse_filter = 2

[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine" method="_on_animation_finished"]
